releases/mlflow.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mlflow
